<resources>
    <string name="app_name">SOMusic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LoginAndRegister">登陆/注册</string>
    <string name="goodmusic">好音质 SO音乐</string>
    <string name="my">我的</string>
    <string name="recommend">推荐</string>
    <string name="find">发现</string>
    <string name="onlywificonn">仅WIFI联网</string>
    <string name="localmusic">本地音乐</string>
    <string name="musicdownload">歌曲下载</string>
    <string name="mvdownolad">MV下载</string>
    <string name="recentplay">最近播放</string>
    <string name="hasdownload">下载已完成</string>
    <string name="nodownload">没有下载任务</string>
    <string name="song">歌曲</string>
    <string name="artist">歌手</string>
    <string name="album">专辑</string>
    <string name="direction">文件夹</string>
    <string name="scanmusic">扫描音乐</string>
    <string name="totalscan">共扫描到</string>
    <string name="nummusic">首音乐</string>
    <string name="scanerror">扫描音乐出错，请确定存储卡已经插好</string>
    <string name="enterApp">进入SO音乐</string>
    <string name="scaning_wait">正在扫描中，请稍候</string>
    <string name="no_lrc_download">没有歌词是否要下载</string>
    <string name="yes">确定</string>
    <string name="cancle">取消</string>
    <string name="down_lrc_suc">歌词下载成功</string>
    <string name="down_lrc_err">歌词下载失败</string>
    <string name="lrc_tip">没有歌词或歌词错误</string>
    <string name="loading">正在加载中，稍后...</string>
    <string name="sortbytitle">按歌名排序</string>
    <string name="sortbyartist">按歌手名排序</string>
    <string name="collect">收藏</string>
    <string name="setAlerm">设为铃声</string>
    <string name="delete">删除</string>

<!-- TODO: Remove or change this placeholder text -->

</resources>
